<resources>
    <string name="app_name">Simple Gallery</string>
    <string name="app_launcher_name">Gallery</string>
    <string name="edit">Edit</string>
    <string name="open_camera">Open camera</string>
    <string name="hidden">(hidden)</string>
    <string name="unpin_folder">Unpin folder</string>
    <string name="pin_to_the_top">Pin to the top</string>
    <string name="show_all">Show all folders content</string>
    <string name="all_folders">All folders</string>
    <string name="folder_view">Switch to folder view</string>
    <string name="other_folder">Other folder</string>
    <string name="show_on_map">Show on map</string>
    <string name="unknown_location">Unknown location</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="change_orientation">Change orientation</string>
    <string name="force_portrait">Force portrait</string>
    <string name="force_landscape">Force landscape</string>
    <string name="use_default_orientation">Use default orientation</string>
    <string name="fix_date_taken">Fix Date Taken value</string>
    <string name="fixing">Fixing…</string>
    <string name="dates_fixed_successfully">Dates fixed successfully</string>
    <string name="no_date_takens_found">No Date Taken values have been found</string>
    <string name="upgraded_from_free">Hey,\n\nseems like you upgraded from the old free app. You can now uninstall the old version, which has an \'Upgrade to Pro\' button at the top of the app settings.\n\nYou will only have the Recycle bin items deleted, favorite items unmarked and you will also have to reset your app settings.\n\nThanks!</string>
    <string name="switch_to_file_search">Switch to file search across all visible folders</string>
    <string name="set_as_default_folder">Set as default folder</string>
    <string name="unset_as_default_folder">Unset as default folder</string>
    <string name="filter_media">Filter media</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="gifs">GIFs</string>
    <string name="raw_images">RAW images</string>
    <string name="svgs">SVGs</string>
    <string name="portraits">Portraits</string>
    <string name="no_media_with_filters">No media files have been found with the selected filters.</string>
    <string name="change_filters_underlined"><u>Change filters</u></string>
    <string name="hide_folder_description">This function hides the folder by adding a \'.nomedia\' file into it, it will hide all subfolders too. You can see them by toggling the \'Show hidden items\' option in Settings. Continue?</string>
    <string name="exclude">Exclude</string>
    <string name="excluded_folders">Excluded folders</string>
    <string name="manage_excluded_folders">Manage excluded folders</string>
    <string name="exclude_folder_description">This will exclude the selection together with its subfolders from Simple Gallery only. You can manage excluded folders in Settings.</string>
    <string name="exclude_folder_parent">Exclude a parent instead?</string>
    <string name="excluded_activity_placeholder">Excluding folders will make them together with their subfolders hidden just in Simple Gallery, they will still be visible in other applications.\n\nIf you want to hide them from other apps too, use the Hide function.</string>
    <string name="hidden_folders">Hidden folders</string>
    <string name="manage_hidden_folders">Manage hidden folders</string>
    <string name="hidden_folders_placeholder">Seems like you don\'t have any folders hidden with a \".nomedia\" file.</string>
    <string name="include_folders">Included folders</string>
    <string name="manage_included_folders">Manage included folders</string>
    <string name="add_folder">Add folder</string>
    <string name="included_activity_placeholder">If you have some folders which contain media, but were not recognized by the app, you can add them manually here.\n\nAdding some items here will not exclude any other folder.</string>
    <string name="no_media_add_included">No media files have been found. You can solve it by adding the folders containing media files manually.</string>
    <string name="resize">Resize</string>
    <string name="resize_and_save">Resize selection and save</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="keep_aspect_ratio">Keep aspect ratio</string>
    <string name="invalid_values">Please enter a valid resolution</string>
    <string name="editor">Editor</string>
    <string name="rotate">Rotate</string>
    <string name="invalid_image_path">Invalid image path</string>
    <string name="image_editing_failed">Image editing failed</string>
    <string name="unknown_file_location">Unknown file location</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_one_eighty">Rotate by 180º</string>
    <string name="flip_horizontally">Flip horizontally</string>
    <string name="flip_vertically">Flip vertically</string>
    <string name="free_aspect_ratio">Free</string>
    <string name="other_aspect_ratio">Other</string>
    <string name="simple_wallpaper">Simple Wallpaper</string>
    <string name="setting_wallpaper">Setting wallpaper&#8230;</string>
    <string name="wallpaper_set_successfully">Wallpaper set successfully</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screen">Home and lock screen</string>
    <string name="slideshow">Slideshow</string>
    <string name="interval">Interval (seconds):</string>
    <string name="include_videos">Include videos</string>
    <string name="include_gifs">Include GIFs</string>
    <string name="random_order">Random order</string>
    <string name="move_backwards">Move backwards</string>
    <string name="loop_slideshow">Loop slideshow</string>
    <string name="animation">Animation</string>
    <string name="no_animation">None</string>
    <string name="fade">Fade</string>
    <string name="slide">Slide</string>
    <string name="slideshow_ended">The slideshow ended</string>
    <string name="no_media_for_slideshow">No media for the slideshow have been found</string>
    <string name="group_direct_subfolders">Group direct subfolders</string>
    <string name="group_by">Group by</string>
    <string name="do_not_group_files">Do not group files</string>
    <string name="by_folder">Folder</string>
    <string name="by_last_modified_daily">Last modified (daily)</string>
    <string name="by_last_modified_monthly">Last modified (monthly)</string>
    <string name="by_date_taken_daily">Date taken (daily)</string>
    <string name="by_date_taken_monthly">Date taken (monthly)</string>
    <string name="by_file_type">File type</string>
    <string name="by_extension">Extension</string>
    <string name="grouping_and_sorting">Please note that grouping and sorting are 2 independent fields</string>
    <string name="folder_on_widget">Folder shown on the widget:</string>
    <string name="show_folder_name">Show folder name</string>
    <string name="autoplay_videos">Play videos automatically</string>
    <string name="remember_last_video_position">Remember last video playback position</string>
    <string name="loop_videos">Loop videos</string>
    <string name="animate_gifs">Animate GIFs at thumbnails</string>
    <string name="max_brightness">Max brightness when viewing fullscreen media</string>
    <string name="crop_thumbnails">Crop thumbnails into squares</string>
    <string name="show_thumbnail_video_duration">Show video durations</string>
    <string name="screen_rotation_by">Rotate fullscreen media by</string>
    <string name="screen_rotation_system_setting">System setting</string>
    <string name="screen_rotation_device_rotation">Device rotation</string>
    <string name="screen_rotation_aspect_ratio">Aspect ratio</string>
    <string name="black_background_at_fullscreen">Black background at fullscreen media</string>
    <string name="scroll_thumbnails_horizontally">Scroll thumbnails horizontally</string>
    <string name="hide_system_ui_at_fullscreen">Automatically hide system UI at fullscreen media</string>
    <string name="delete_empty_folders">Delete empty folders after deleting their content</string>
    <string name="allow_photo_gestures">Allow controlling photo brightness with vertical gestures</string>
    <string name="show_extended_details">Show extended details over fullscreen media</string>
    <string name="manage_extended_details">Manage extended details</string>
    <string name="allow_instant_change">Allow instantly changing media by clicking on screen sides</string>
    <string name="allow_deep_zooming_images">Allow deep zooming images</string>
    <string name="hide_extended_details">Hide extended details when status bar is hidden</string>
    <string name="show_at_bottom">Show some action buttons at the bottom of the screen</string>
    <string name="show_recycle_bin">Show the Recycle Bin at the folders screen</string>
    <string name="deep_zoomable_images">Deep zoomable images</string>
    <string name="show_highest_quality">Show images in the highest possible quality</string>
    <string name="show_recycle_bin_last">Show the Recycle Bin as the last item on the main screen</string>
    <string name="allow_down_gesture">Allow closing the fullscreen view with a down gesture</string>
    <string name="allow_one_to_one_zoom">Allow 1:1 zooming in with two double taps</string>
    <string name="open_videos_on_separate_screen">Always open videos on a separate screen with new horizontal gestures</string>
    <string name="show_notch">Show a notch if available</string>
    <string name="allow_rotating_gestures">Allow rotating images with gestures</string>
    <string name="file_loading_priority">File loading priority</string>
    <string name="speed">Speed</string>
    <string name="compromise">Compromise</string>
    <string name="avoid_showing_invalid_files">Avoid showing invalid files</string>
    <string name="show_image_file_types">Show image file types</string>
    <string name="folder_thumbnail_style">Folder thumbnail style</string>
    <string name="file_thumbnail_style">File thumbnail style</string>
    <string name="thumbnail_spacing">Thumbnail spacing</string>
    <string name="show_file_count_line">Show file count on a separate line</string>
    <string name="show_file_count_brackets">Show file count in brackets</string>
    <string name="show_file_count_none">Do not show file count</string>
    <string name="limit_folder_title">Limit long folder titles to 1 line</string>
    <string name="square">Square</string>
    <string name="rounded_corners">Rounded corners</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="fullscreen_media">Fullscreen media</string>
    <string name="extended_details">Extended details</string>
    <string name="bottom_actions">Bottom actions</string>
    <string name="manage_bottom_actions">Manage visible bottom actions</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="toggle_file_visibility">Toggle file visibility</string>
    <string name="faq_1_title">How can I make Simple Gallery the default device gallery?</string>
    <string name="faq_1_text">First you have to find the currently default gallery in the Apps section of your device settings, look for a button that says something like \"Open by default\", click on it, then select \"Clear defaults\".
        The next time you will try opening an image or video you should see an app picker, where you can select Simple Gallery and make it the default app.</string>
    <string name="faq_2_title">I locked the app with a password, but I forgot it. What can I do?</string>
</resources>