<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/cbFilterMediaImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/images" />

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/cbFilterMediaVideos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/videos" />

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/filter_media_gifs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/gifs" />

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/cbFilterMediaRaws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/raw_images" />

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/cbFilterMediaSvgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/svgs" />

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/cbFilterMediaPortraits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/portraits" />

</LinearLayout>
