<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/rgGroupingDialogRadioGrouping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/do_not_group_files" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioLastModifiedDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_last_modified_daily" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioLastModifiedMonthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_last_modified_monthly" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioDateTakenDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_date_taken_daily" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioDateTakenMonthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_date_taken_monthly" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioFileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_file_type" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioExtension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_extension" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_folder" />

        </RadioGroup>

        <include layout="@layout/divider" />

        <RadioGroup
            android:id="@+id/rgGroupingDialogRadioOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioAscending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/ascending" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbGroupingDialogRadioDescending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/descending" />
        </RadioGroup>

        <include
            android:id="@+id/use_for_this_folder_divider"
            layout="@layout/divider" />

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/cbGroupingDialogUseForThisFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/use_for_this_folder" />

        <com.simplemobiletools.commons.views.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:text="@string/grouping_and_sorting"
            android:textSize="@dimen/smaller_text_size" />

    </LinearLayout>
</ScrollView>
