<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RelativeLayout
            android:id="@+id/layoutDialogFolderSample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/dialog_radio_folder_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbDialogRadioFolderSquare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/square" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbDialogRadioFolderRoundedCorners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/rounded_corners" />

        </RadioGroup>

        <include layout="@layout/divider" />

        <RadioGroup
            android:id="@+id/rgDialogRadioFolderCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbDialogRadioFolderCountLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/show_file_count_line" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbDialogRadioFolderCountBrackets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/show_file_count_brackets" />

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/rbDialogRadioFolderCountNone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/show_file_count_none" />
        </RadioGroup>

        <include layout="@layout/divider" />

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/cbDialogFolderLimitTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/limit_folder_title" />

    </LinearLayout>
</ScrollView>
