<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <com.simplemobiletools.commons.views.MyTextView
            android:id="@+id/tvIntervalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/interval" />

        <com.simplemobiletools.commons.views.MyEditText
            android:id="@+id/etIntervalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:ems="5"
            android:gravity="end"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="5"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/normal_text_size"
            tools:ignore="RelativeOverlap" />

        <RelativeLayout
            android:id="@+id/layoutAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIntervalLabel"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingTop="@dimen/bigger_margin"
            android:paddingBottom="@dimen/bigger_margin">

            <com.simplemobiletools.commons.views.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/tvAnimationValue"
                android:paddingLeft="@dimen/medium_margin"
                android:paddingRight="@dimen/medium_margin"
                android:text="@string/animation" />

            <com.simplemobiletools.commons.views.MyTextView
                android:id="@+id/tvAnimationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="@null"
                android:clickable="false"
                tools:text="@string/slide" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutIncludeVideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutAnimation"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/include_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:text="@string/include_videos" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutIncludeGifs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutIncludeVideos"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/swIncludeGifs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:text="@string/include_gifs" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutRandomOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutIncludeGifs"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/medium_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/swRandomOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:text="@string/random_order" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutMoveBackwards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutRandomOrder"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/swMoveBackwards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:text="@string/move_backwards" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutLoopSlideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutMoveBackwards"
            android:background="?attr/selectableItemBackground"
            android:paddingStart="@dimen/medium_margin"
            android:paddingEnd="0dp"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/swLoopSlideshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:text="@string/loop_slideshow" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
